styles/global.sass
// Global
@use "utilities"
@use "colors"
@use "animations"
@use "fonts"

// Components
@use "navigation"
@use "button"
@use "popovers"
@use "nuxtPages"
@use "kofiTools"

*
  scrollbar-width: none !important
  box-sizing: border-box

body
  display: flex
  align-items: center
  justify-content: center
  margin: 0
  padding: 0
  min-height: 100vh

  background: colors.$backgroundColor
  color: colors.$textColor
  user-select: none
  -webkit-user-select: none

div
  display: flex
  flex-direction: column
  align-items: center

  border-radius: 1rem

ul
  padding-inline-start: 1.25rem
  margin: -0.25rem

a
  display: inline-flex
  align-items: center
  justify-content: center
  text-decoration: none
  color: colors.$textColor
  cursor: pointer

svg
  color: colors.$textColor

input, textarea
  margin: 0.5rem
  padding: 0.5rem 0.75rem
  border-radius: 1rem
  background: colors.$foregroundColor
  border: none
  outline: none
  color: colors.$textColor

